--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "express": "^4.18.2",
     "sequelize": "^6.35.2",
     "sqlite3": "^5.1.6",
-    "typescript": "^5.3.3",
     "ts-node": "^10.9.1",
+    "typescript": "^5.3.3",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
