--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "ts-node index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon index.ts"
   },
   "author": "",
   "license": "ISC",
@@ -23,6 +24,7 @@
     "@types/express": "^4.17.21",
     "@types/node": "^20.10.4",
     "@types/uuid": "^9.0.7",
-    "@typescript-eslint/eslint-plugin": "^6.14.0"
+    "@typescript-eslint/eslint-plugin": "^6.14.0",
+    "nodemon": "^3.0.2"
   }
 }
