--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "express": "^4.18.2",
+    "qrcode-terminal": "^0.12.0",
     "sequelize": "^6.35.2",
     "sqlite3": "^5.1.6",
     "ts-node": "^10.9.1",
@@ -23,6 +24,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
     "@types/node": "^20.10.4",
+    "@types/qrcode-terminal": "^0.12.2",
     "@types/uuid": "^9.0.7",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "nodemon": "^3.0.2"
