--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aedes": "^0.51.0",
+    "aedes-server-factory": "^0.2.1",
     "bcrypt": "^5.1.1",
     "express": "^4.18.2",
     "qrcode-terminal": "^0.12.0",
