--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "aedes-server-factory": "^0.2.1",
     "bcrypt": "^5.1.1",
     "express": "^4.18.2",
+    "mqtt": "^5.5.0",
     "qrcode-terminal": "^0.12.0",
     "sequelize": "^6.35.2",
     "sqlite3": "^5.1.6",
