--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bcrypt": "^5.1.1",
     "express": "^4.18.2",
     "mqtt": "^5.5.0",
+    "prompts": "^2.4.2",
     "qrcode-terminal": "^0.12.0",
     "sequelize": "^6.35.2",
     "sqlite3": "^5.1.6",
@@ -27,6 +28,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
     "@types/node": "^20.10.4",
+    "@types/prompts": "^2.4.9",
     "@types/qrcode-terminal": "^0.12.2",
     "@types/uuid": "^9.0.7",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
