--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@ngrok/ngrok": "^1.3.0",
     "aedes": "^0.51.0",
     "aedes-server-factory": "^0.2.1",
     "bcrypt": "^5.1.1",
